[package]
name = "risingwave_meta_model"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc"] }
mongodb = "3.2.1"
prost = { workspace = true }
risingwave_common = { workspace = true }
risingwave_pb = { workspace = true }
sea-orm = { workspace = true }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1"
